# LiuAlgoTrader

./: .codacy.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .therapist.yml  .travis.yml  10K-11stocks-0.03vol-1-13-2022.html  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE-VERSION  SECURITY.md  Untitled.ipynb  algo.py  alpaca_producer.py  backtester.py  brandtreade_tearsheet.html  codecov.yml  config.py  consumer.py  consumer.py.wip  db-script.sql  finnhub_playground.ipynb  finnhub_producer.py  index.md  jdst-below-sma50-jun-20-21.html  jnug-above-sma50-jun-20-21.html  jnug-jdst-vol-06-20-06-21.html  jnug-vol-06-20-06-21.html  jnug-vol-tearsheet-20-21.html  jungjdst-sma50cross-jun-20-21.html  liu_tradeplan.toml  liutrader.py  macd buy signal.ipynb  market_data.py  (+21 more)
.github/workflows/: codeql-analysis.yml  greetings.yml  main.yml  python-publish.yml  stale.yml  todo.yml  workflow.yml
.ipynb_checkpoints/: macd buy signal-checkpoint.ipynb  portfolio_performance_analysis-checkpoint.ipynb  test_macd-checkpoint.ipynb
.mypy_cache/3.8/: algo.data.json  algo.meta.json
analyis/: backtester_ui.py  day_trade_ui.py
analyis/notebooks/: backtest_performance_analysis.ipynb  deep_analysis.ipynb  macd.ipynb  market_data.ipynb  portfolio_performance_analysis.ipynb  returns_analysis.ipynb  support_resistance_lab.ipynb  tear_sheet.ipynb
analyis_notebooks/: backtest_performance_analysis.ipynb  batch_performance_analysis.ipynb  market_data.ipynb  portfolio_performance_analysis.ipynb  support_resistance_lab.ipynb
analyis_notebooks/.ipynb_checkpoints/: backtest_performance_analysis-checkpoint.ipynb  macd-checkpoint.ipynb  market_data-checkpoint.ipynb  portfolio_performance_analysis-checkpoint.ipynb  support_resistance_lab-checkpoint.ipynb
analysis/: backtester_ui.py  day_trade_ui.py
analysis/.ipynb_checkpoints/: portfolio_performance_analysis-checkpoint.ipynb
analysis/notebooks/: ATTENTION-NN.ipynb  LSTM.ipynb  anchored-vwap-lab.ipynb  backtest_performance_analysis.ipynb  batch_analysis.ipynb  bbands_lab.ipynb  deep_analysis.ipynb  distributions.ipynb  gain_loss_lab.ipynb  hyperparameters_analysis.ipynb  indices.ipynb  macd.ipynb  market_data.ipynb  momentum_portfolio.ipynb  momentum_portfolio.py  portfolio.ipynb  portfolio_analysis.ipynb  portfolio_current.ipynb  tear_sheet.ipynb  (+3 more)
common/: config.py  database.py  decorators.py  market_data.py  tlog.py  trading_data.py
data_stream/: alpaca.py  finnhub.py  streaming_base.py
database/: docker-compose-windows.yml  docker-compose.yml  market_m_a_data.csv  postgres.conf  schema.sql
dbspy/: anomalies.html  columns.html  constraints.html  deletionOrder.txt  index.html  info-html.txt  insertionOrder.txt  orphans.html  relationships.html  routines.html  tradedb.public.xml
design/: ml-concepts.ipynb  mock_strategy_contextvars.py  test_mock_strategy_contextvars.py
docs/: conf.py  index.rst
examples/: bandtrade_ksilo.py  env_vars.sh  miner.toml  my_scanner.py  my_strategy.py  tearsheet.html  tradeplan.toml
fincalcs/: candle_patterns.py  data_conditions.py  support_resistance.py  vwap.py
k8s/: grafana-1-svc.yaml  ingress-resource.yaml
legacy/: algo.py
liualgotrader/: __init__.py  backtester  backtester.py  backtester_ui.py  consumer.py  enhanced_backtest.py  liu  liu.py  market_miner  market_miner.py  optimizer  polygon_producer.py  portfolio  producer.py  requirements.txt  scanner_recurrence.py  scanners_runner.py  trader  trader.py
models/: algo_run.py  new_trades.py  ticker_data.py  trades.py  trending_tickers.py
setup/: db-script.sql
static/: finnhub_exchanges.csv  finnhub_indices.csv
strategies/: base.py  momentum_long.py  momentum_short.py  momentun_short.py  vwap_long.py  vwap_scalp.py
tests/: test_accounts.py  test_alpaca_basic.py  test_alpaca_brokerage.py  test_alpaca_crypto_data_loader.py  test_alpaca_data_loader.py  test_alpaca_data_loader_concurrency.py  test_alpaca_data_loader_multi.py  test_alpaca_data_loader_perf.py  test_alpaca_new_sdk.py  test_alpaca_stream.py  test_alpaca_trader.py  test_alpacadata.py  test_analysis.py  test_assets.py  test_backtest.py  test_consolidate.py  test_cpu_load_avg.py  test_create_scanner.py  test_data_date_ranges.py  test_data_loader.py  test_db.py  test_decorators.py  test_external_feeds.py  test_fincalc_vwap.py  test_finnhub_basic.py  test_gemini_basic.py  test_gemini_data_loader.py  test_gemini_stream.py  test_gemini_trader.py  test_hyperparameters.py  test_keystore.py  test_load_scanner.py  test_load_strategy.py  test_market_data.py  test_momentum_scanner.py  test_polygon_basic.py  test_polygon_data_loader.py  test_polygon_stream.py  test_portfolio.py  test_resample.py  (+8 more)
tools/: build_talib_from_source.bash  get_paper_account.bash  pre-release.bash  rebuild_schemaspy.bash  set_keys.bash  set_keys.bash.new
(+247 files in other folders)
