[tool.pdm]

[project]
authors = [
  {name = "AMOR71", email = "amor71@sgeltd.com"},
]
dependencies = [
  "iso8601",
  "requests",
  "deprecated",
  "urllib3",
  "numpy",
  "alpaca-trade-api",
  "asyncpg",
  "pygit2",
  "matplotlib",
  "tabulate",
  "streamlit",
  "stockstats",
  "empyrical",
  "nest-asyncio",
  "parsedatetime",
  "scipy",
  "polygon-api-client",
  "finnhub-python",
  "quantstats",
  "tqdm",
  "toml",
  "fire",
  "pandas-market-calendars",
  "psutil",
  "aiohttp>=3.8.3",
]
description = "a Pythonic all-batteries-included framework for effective algorithmic trading. The framework is intended to simplify development, testing, deployment and evaluating algo trading strategies."
license = {text = "MIT"}
name = "liualgotrader"
readme = "README.md"
requires-python = ">=3.10"
version = "0.4.31"

[project.optional-dependencies]
dev = [
  "therapist>=2.2.0",
  "pytest>=7.2.0",
  "pytest-asyncio>=0.20.3",
  "hypothesis>=6.60.0",
  "mypy>=0.991",
  "black>=22.12.0",
  "autoflake>=2.0.0",
  "bandit>=1.7.4",
  "isort>=5.11.4",
  "types-pytz>=2022.7.0.0",
  "types-requests>=2.28.11.7",
]

[project.scripts]
liu = "liualgotrader.scripts.liu:main_cli"

[tool.pdm.version]
source = "scm" 
write_template = "__version__ = '{}'" # optional, default to "{}"
write_to = "liualgotrader/__version__.py" 

[tool.pdm.build]
excludes = ["tests"]

[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]
