[tool.pdm]

[project]
authors = [
  {name = "AMOR71", email = "amor71@sgeltd.com"},
]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]
dependencies = [
    "iso8601",
    "requests",
    "deprecated",
    "urllib3",
    "numpy",
    "asyncpg",
    "pygit2",
    "matplotlib",
    "tabulate",
    "streamlit",
    "stockstats",
    "empyrical",
    "nest-asyncio",
    "parsedatetime",
    "scipy",
    "polygon-api-client",
    "finnhub-python",
    "quantstats",
    "tqdm",
    "toml",
    "fire",
    "pandas-market-calendars",
    "psutil",
    "aiohttp>=3.8.3",
    "alpaca-py>=0.7.0",
]
description = "a Pythonic all-batteries-included framework for effective algorithmic trading. The framework is intended to simplify development, testing, deployment and evaluating algo trading strategies."
license = {text = "MIT"}
name = "liualgotrader"
readme = "README.md"
requires-python = ">=3.10"
version = "0.4.35"
[project.optional-dependencies]
dev = [
    "therapist>=2.2.0",
    "pytest>=7.2.0",
    "pytest-asyncio>=0.20.3",
    "hypothesis>=6.60.0",
    "mypy>=0.991",
    "black>=22.12.0",
    "autoflake>=2.0.0",
    "bandit>=1.7.4",
    "isort>=5.11.4",
    "types-pytz>=2022.7.0.0",
    "types-requests>=2.28.11.7",
    "types-tabulate>=0.9.0.0",
    "types-toml>=0.10.8.1",
    "sphinx>=6.1.2",
    "coverage>=7.0.4",
    "pytest-codecov>=0.5.1",
    "types-python-dateutil>=2.8.19.5",
    "jupyter>=1.0.0",
    "nbqa>=1.6.1",
    "nb-clean>=2.4.0",
    "codecov-cli>=0.1.17",
]
[tool.pdm.scripts]
codecov = "tools/pre-release.bash"

[project.scripts]
backtester = "liualgotrader.scripts.backtester:main_cli"
liu = "liualgotrader.scripts.liu:main_cli"
market_miner = "liualgotrader.scripts.market_miner:main_cli"
optimizer = "liualgotrader.scripts.optimizer:main_cli"
portfolio = "liualgotrader.scripts.portfolio:main_cli"
trader = "liualgotrader.scripts.trader:main_cli"

[tool.pdm.version]
source = "scm" 
write_template = "__version__ = '{}'" # optional, default to "{}"
write_to = "liualgotrader/__version__.py" 

[tool.pdm.build]
excludes = ["tests"]

[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]
